# robopilot

./: README.md
backend/: Cargo.toml  README.md
backend/examples/: hub.rs
backend/notification_hub/: Cargo.toml  README.md
backend/notification_hub/src/: main.rs
backend/notification_hub/src/adapters/notification_hub/serial/: channels.rs  client.rs  message.rs  mod.rs
backend/notification_hub/src/adapters/notification_hub/websocket/: client.rs  message.rs  mod.rs
backend/notification_hub/src/models/hub/: hub_data.rs
backend/notification_hub/src/ports/: notofication_hub.rs
backend/notification_hub/src/services/hub/: channel.rs  controller.rs  mod.rs
backend/src/: main.rs
backend/src/adapters/: mock_joystick.rs  mock_sensors.rs  mod.rs
backend/src/adapters/notification_hub/: mod.rs
backend/src/adapters/notification_hub/serial/: channels.rs  client.rs  client_pipe.rs  message.rs  mod.rs
backend/src/adapters/notification_hub/websocket/: client.rs  handlers.rs  message.rs  mod.rs  server.rs
backend/src/models/: joystick_data.rs  mod.rs  sensor.rs
backend/src/models/hub/: hub_channel_name.rs  hub_data.rs  hub_message.rs  mod.rs
backend/src/ports/: joystick_handler.rs  mod.rs  notofication_hub.rs  sensor.rs
backend/src/services/hub/: channel.rs  controller.rs  user.rs
backend/test-utils/: Cargo.toml
backend/test-utils/examples/: arduino.rs  hub.rs
backend/test-utils/src/: client_pipe.rs  client_pipe_options.rs  data_source.rs  hub.rs  lib.rs
frontend/: .env.local  .gitignore  README.md  package.json
frontend/.next/: app-build-manifest.json  build-manifest.json  trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/vendor-chunks/: clsx.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 8305fe482b8db2d2.webpack.hot-update.json  webpack.3764ffd398eb99dc.hot-update.js  webpack.8305fe482b8db2d2.hot-update.js  webpack.9105bb8eb7bde579.hot-update.js  webpack.de5d21ed7527fe5b.hot-update.js
frontend/.next/types/app/: layout.ts
frontend/src/: config.ts
frontend/src/app/: layout.tsx
frontend/src/app/(main)/: page.tsx
frontend/src/components/: Container.tsx  Joystick.tsx  JoystickContainer.tsx  Layout.tsx  Sensors.tsx
frontend/src/styles/: joystick.css
(+16 files in other folders)
