[package]
name = "robopilot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11" 
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
rand = "0.8"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1"
tokio-serial = "5.4.5"
tokio-tungstenite = "0.24.0"
serialport = "4.7.0"
async-trait = "0.1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
url = "2.5.4"
futures-util = "0.3.31"
futures-channel = "0.3.31"
once_cell = "1"

uuid = { version = "1", features = ["v4"] }
imu_common = { git = "https://github.com/druiz0992/imu-rs.git", branch = "main" }

[dev-dependencies]
ws-mock = "0.2.1"