[workspace]
members = ["notification_hub", "test-utils"]
resolver = "2"

[profile.dev]
opt-level = 3


[workspace.dependencies]
log = "0.4"
env_logger = "0.11" 
rand = "0.8"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1"
tokio-serial = "5.4.5"
tokio-tungstenite = "0.24.0"
serialport = "4.7.0"
async-trait = "0.1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
futures-util = "0.3.31"
futures-channel = "0.3.31"
uuid = { version = "1", features = ["v4"] }
imu_common = { git = "https://github.com/druiz0992/imu-rs.git", branch = "main", features = ["serde-serialize"] }
