[package]
name = "notification_hub"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
env_logger.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-stream.workspace  = true
tokio-serial.workspace = true
tokio-tungstenite.workspace = true
serialport.workspace = true
async-trait.workspace   = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
futures-channel.workspace = true

uuid.workspace = true
imu_common.workspace = true